# pix

./: README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  style.css
frontend/src/components/: SearchLink.tsx  SimilarImageCompare.tsx
frontend/src/routes/: __root.tsx  faces.tsx  imageDetail.tsx  imageSimilar.tsx  index.tsx  root.tsx  search.tsx  searchResult.tsx  similar.tsx
frontend/src/utils/: listUpdater.ts  manualTags.ts  search.ts  tagQuery.ts
pix/: app.py  config.py  download.py  embedding_index.py  manage.py  pipeline.py  server.py
pix/api/: face_clusters.py  images.py  tags.py  tasks.py
pix/autotagger/: custom.py  insightface.py  wd.py
pix/command/: autotag.py  download.py
pix/downloader/: twitter_base.py  twitter_nitter.py  twitter_playwright.py
pix/embeddings/: clip.py  csd.py  csd_model.py  dinov2.py  resnet.py  siglip2.py
pix/model/: character.py  face_cluster.py  image.py  tweet.py
pix/static/: style.css
pix/task/: autotag.py  build_embedding_index.py  download.py  embedding.py  facecluster.py  facedetect.py  train_classifier.py
pix/templates/: _base.html  detail.html  index.html
pixdb/: db.py  doc.py  inject.py  repo.py  schema.py
tests/pix/: test_embedding_index.py
tests/pix/model/: test_image.py
tests/pixdb/: test_database.py  test_inject.py  test_repo.py  test_schema.py
