[tool.poetry]
name = "pix"
version = "0.1.0"
description = ""
authors = ["Taeho Kim <dittos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
tqdm = "^4.66.1"
fastapi = {extras = ["all"], version = "^0.109.0"}
arrow = "^1.3.0"
faiss-cpu = "^1.7.4"
polars = "^0.20.7"
apscheduler = "^3.10.4"
google-cloud-storage = "^2.14.0"
transformers = {extras = ["torch"], version = "^4.41.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ipykernel = "^6.29.4"

[tool.poetry.group.autotagger-wd.dependencies]
pillow = "^10.2.0"
huggingface-hub = "^0.23"
onnxruntime = ">=1.12.0"
opencv-python = "~4.8"
onnx = "^1.15.0"

[tool.poetry.group.downloader-twitter-playwright.dependencies]
playwright = "^1.41.2"

[tool.poetry.group.autotagger-insightface.dependencies]
insightface = "^0.7.3"
onnxruntime = "^1.16.3"

[tool.poetry.group.embeddings-clip.dependencies]
open-clip-torch = "^2.24.0"

[tool.poetry.scripts]
pix = "pix.manage:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
