[project]
name = "pix"
version = "0.1.0"
description = ""
authors = [{ name = "Taeho Kim", email = "dittos@gmail.com" }]
requires-python = "~=3.12.0"
readme = "README.md"
dependencies = [
    "requests>=2.31.0,<3",
    "beautifulsoup4>=4.12.2,<5",
    "pydantic>=2.5.3,<3",
    "pydantic-settings>=2.1.0,<3",
    "sqlalchemy>=2.0.25,<3",
    "tqdm>=4.66.1,<5",
    "fastapi[all]>=0.109.0,<0.110",
    "arrow>=1.3.0,<2",
    "faiss-cpu>=1.7.4,<2",
    "polars>=0.20.7,<0.21",
    "apscheduler>=3.10.4,<4",
    "google-cloud-storage>=2.14.0,<3",
    "transformers[torch]>=4.41.1,<5",
    "numpy>1.24.4,<2",
]

[project.scripts]
pix = "pix.manage:main"

[dependency-groups]
dev = [
    "pytest>=7.4.4,<8",
    "ipykernel>=6.29.4,<7",
]
autotagger-wd = [
    "pillow>=10.2.0,<11",
    "huggingface-hub>=0.23,<0.24",
    "onnxruntime>=1.12.0",
    "opencv-python>=4.8,<4.9",
    "onnx>=1.15.0,<2",
]
downloader-twitter-playwright = ["playwright>=1.41.2,<2"]
autotagger-insightface = [
    "insightface>=0.7.3,<0.8",
    "onnxruntime>=1.16.3,<2",
]
embeddings-clip = ["open-clip-torch>=2.24.0,<3"]

[tool.uv]
default-groups = [
    "dev",
    "autotagger-wd",
    "downloader-twitter-playwright",
    "autotagger-insightface",
    "embeddings-clip",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "."
